--- a/.covio.yaml
+++ b/.covio.yaml
@@ -1,6 +1,4 @@
-endpoint: http://localhost:8000/api/v1/tasks/
-service:
-  name: dummy
 violations:
   pep8: pep8 coviolations_app
-project: 'nvbn/vkvideo'
+  sloccount: sloccount coviolations_app
+project: 'nvbn/coviolations_app'
