--- a/.covio.yml
+++ b/.covio.yml
@@ -1,3 +1,6 @@
 violations:
   pep8: pep8 coviolations_app
   sloccount: sloccount coviolations_app
+  pip_review:
+    command: pip-review
+    nofail: true
